Fix static assets routing.

--- a/src/Assets/bootstrap-codeine/Main.html
+++ b/src/Assets/bootstrap-codeine/Main.html
@@ -27,6 +27,7 @@
     <css>:bower/normalize-css/normalize</css>
     <css>:bower/bootstrap/dist/css/bootstrap.min</css>
     <css>:bower/font-awesome/css/font-awesome</css>
+    <css>font-awesome-codeine</css>
 
     <css>bootstrap-codeine:addons</css>
 
