--- a/src/Assets/Finish.html
+++ b/src/Assets/Finish.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Perfect Mode</title>
+    <title>Final notice</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.10.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.10.0/highlight.min.js"></script>
 </head>
 <body>
-
-<h2>Perfect Mode</h2>
-<h4><perfect:message/></h4>
-<pre><perfect:stack/></pre>
-<pre><code class="json"><perfect:logs/></code></pre>
+<h2><finish:message/></h2>
+<pre><finish:stack/></pre>
+<pre><code class="json"><finish:logs/></code></pre>
 
 <script>hljs.initHighlightingOnLoad();</script>
 
