--- a/src/Assets/User/Control/Show/Short.html
+++ b/src/Assets/User/Control/Show/Short.html
@@ -1,6 +1,13 @@
 <li class="list-group-item">
     <div class="pull-right">
-        <layout>Control:Pills/RUD</layout>
+        <ul class="list-inline">
+            <li>
+                <a href="/control/<call>Entity</call>/Impersonate/<k>ID</k>?BackURL=/profile">
+                    <span class="fa fa-user-circle-o" data-toggle="tooltip" title="<l>User.Impersonate:Title</l>"></span>
+                </a>
+            </li>
+            <layout>Control:Mixins/RUD</layout>
+        </ul>
     </div>
     <h4><k>Title</k></h4>
     <div>Email: <a href="mailto:<k>EMail</k>"><k>EMail</k></a></div>
