--- a/src/Assets/bootstrap-codeine/Main.html
+++ b/src/Assets/bootstrap-codeine/Main.html
@@ -8,6 +8,7 @@
 <head>
     <title/>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <environment eq="Production">
