Journal Application. Various fixes. Locale:Get.

--- a/src/Assets/Journal/Table.html
+++ b/src/Assets/Journal/Table.html
@@ -1,10 +1,3 @@
-<table class="table table-condensed table-striped">
-    <tr>
-        <th>Время</th>
-        <th>Сервис</th>
-        <th>Событие</th>
-        <th>Пользователь</th>
-        <th>Подробности</th>
-    </tr>
+<div class="list-group">
     <place>Content</place>
-</table>
+</div>
