--- a/src/Assets/bootstrap-codeine/Widgets/Form/File.html
+++ b/src/Assets/bootstrap-codeine/Widgets/Form/File.html
@@ -7,13 +7,10 @@
             <block>placeholder="<k>Placeholder</k>"</block> />
             <block>Максимальный размер: <k>MaxSize</k></block>
             <block><br/>Разрешённые типы: <k>TypeHint</k></block>
-
         <if value="<k>Value</k>" null="0">
-            <label class="checkbox pull-right">
+            <label class="checkbox text-right">
                 <input type="checkbox" name="<k>Name</k>" value="null" /> Удалить
-                <file><k>Entity</k>/<k>Key</k>/<k>Value</k></file>
             </label>
-            <div class="clearfix"></div>
         </if>
 </div><!--
 <div class="form-group">
