--- a/src/Assets/bootstrap-codeine/Widgets/Form/Typeahead.html
+++ b/src/Assets/bootstrap-codeine/Widgets/Form/Typeahead.html
@@ -5,15 +5,8 @@
         <if value="<k>NoLabel</k>" neq="1">
             <label for="<k>Name</k>"> <l><k>Label</k></l>: <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if></label>
         </if>
-        <block>
-            <span class="input-group-addon"><k>Prefix</k></span>
-        </block>
         <k>HTML</k>
-        <block>
-            <span class="input-group-addon"><k>Postfix</k></span>
-        </block>
-        <input class="form-control" type="hidden" name="<k>Name</k>" id="<k>ID</k>_hidden" value="<k>HValue</k>"/>
-
+        <input type="hidden" name="<k>Name</k>" id="<k>ID</k>_hidden" value="<k>HValue</k>"/>
     </div>
     <if value="<k>Help</k>" eq="1">
         <div class="help-block"><l><k>Entity</k>.Help:<k>Key</k></l></div>
