--- a/src/Assets/Entity/Search.html
+++ b/src/Assets/Entity/Search.html
@@ -1,5 +1,3 @@
-<subtitle>Поиск</subtitle>
-<subtitle><call>Query</call></subtitle>
-<keyword><call>Query</call></keyword>
-
+<subtitle>«<variable>Query</variable>»</subtitle>
 <place>Content</place>
+<place>Pagination</place>
