--- a/src/Assets/Entity/-Delete.html
+++ b/src/Assets/Entity/-Delete.html
@@ -4,7 +4,7 @@
 <subtitle><l>Entity.Delete:Title</l> <k>Title</k></subtitle>
 <div class="row">
     <div class="col-xs-12">
-        <div class="panel panel-entity">
+        <div class="panel panel-default">
             <div class="panel-heading">
                 <div class="panel-title"><l><variable>Entity</variable>.Delete:Confirm</l></div>
             </div>
@@ -14,7 +14,6 @@
             <div class="panel-footer">
                 <form role="form" method="post" enctype="multipart/form-data" autocomplete="on">
                     <place>Content</place>
-
                     <button type="submit" class="btn btn-danger btn-ws"><l><variable>Entity</variable>.Delete:Submit</l></button>
                     <a href="<call>BackURL</call>" class="btn btn-default"><l><variable>Entity</variable>.Delete:Cancel</l></a>
                     <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
