--- a/src/Assets/bootstrap-codeine/Main.html
+++ b/src/Assets/bootstrap-codeine/Main.html
@@ -49,6 +49,7 @@
     <js>Default:activelink</js>
     <js>Default:ajaxlink</js>
     <js>Default:ajaxblock</js>
+    <js>Default:keymaster</js>
 
     <layout>Project:OpenGraph</layout>
     <layout>Project:Head</layout>
