Bugfix: Search templates

--- a/src/Assets/Entity/Search.html
+++ b/src/Assets/Entity/Search.html
@@ -1,3 +1,5 @@
-<subtitle>«<variable>Query</variable>»</subtitle>
+<subtitle><locale>Entity.Search:Title</locale></subtitle>
+<breadcrumb href="<call>HTTP.URL</call>"><header/></breadcrumb>
+
 <place>Content</place>
 <place>Pagination</place>
