--- a/src/Assets/Error/Catcher.html
+++ b/src/Assets/Error/Catcher.html
@@ -1,16 +1,14 @@
 <js>:bower/bootbox.js/bootbox</js>
 <jsrun>
-    $(document).bind('keydown', function(e)
+    key('ctrl+enter', function ()
     {
-        if (e.ctrlKey && e.keyCode == 13)
-        {
-            var selected = "";
-            if (window.getSelection) {
-                selected = window.getSelection().toString();
-            } else if (document.selection && document.selection.type != "Control") {
-                selected = document.selection.createRange().text;
-            }
-
+        var selected = "";
+        if (window.getSelection) {
+            selected = window.getSelection().toString();
+        } else if (document.selection && document.selection.type != "Control") {
+            selected = document.selection.createRange().text;
+        }
+        if (selected.length > 0)
             bootbox.prompt('Укажите, в чём ошибка<br/>«' + selected + "»", function(result)
             {
                 if (result === null)
@@ -30,7 +28,6 @@
                         }
                     })
             });
-
-        }
+        return true;
     });
 </jsrun>
