--- a/src/Assets/bootstrap-codeine/Main.html
+++ b/src/Assets/bootstrap-codeine/Main.html
@@ -46,6 +46,9 @@
         <js>Locale</js>
         <css>:bower/holmes/holmes</css>
     </environment>
+    <js>:bower/visibilityjs/lib/visibility.core</js>
+    <js>:bower/visibilityjs/lib/visibility.timers</js>
+
     <js>Default:activelink</js>
     <js>Default:ajaxlink</js>
     <js>Default:ajaxblock</js>
