Fixes. Russian FZ152 Support

--- a/src/Assets/Entity/-Delete.html
+++ b/src/Assets/Entity/-Delete.html
@@ -1,7 +1,4 @@
 <subtitle><l><variable>Entity</variable>.Delete:Title</l></subtitle>
-<breadcrumb href="/delete/<k>ID</k>"><l><variable>Entity</variable>.Delete:Title</l></breadcrumb>
-
-<subtitle><l>Entity.Delete:Title</l> <k>Title</k></subtitle>
 <div class="row">
     <div class="col-xs-12">
         <div class="panel panel-default">
@@ -15,8 +12,8 @@
                 <form role="form" method="post" enctype="multipart/form-data" autocomplete="on">
                     <place>Content</place>
                     <button type="submit" class="btn btn-danger btn-ws"><l><variable>Entity</variable>.Delete:Submit</l></button>
-                    <a href="<call>BackURL</call>" class="btn btn-default"><l><variable>Entity</variable>.Delete:Cancel</l></a>
-                    <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
+                    <a href="<call>BackURL,Request.BackURL</call>" class="btn btn-default"><l><variable>Entity</variable>.Delete:Cancel</l></a>
+                    <input type="hidden" name="BackURL" value="<call>BackURL,Request.BackURL</call>" />
                 </form>
             </div>
         </div>
