Assets updates. Daemon fixes.

--- a/src/Assets/Wiki/Main.html
+++ b/src/Assets/Wiki/Main.html
@@ -1,12 +1,10 @@
 <subtitle><variable>Project.Title</variable> <l>Wiki.Control:Title</l></subtitle>
 <breadcrumb href="/wiki"><l>Wiki.Control:Title</l></breadcrumb>
-<div class="btn-group spacer">
-    <a class="btn btn-default" href="/wiki"><l>Wiki.TOC:Title</l></a>
-    <a class="btn btn-default" href="/wiki/list"><l>Wiki.List:Title</l></a>
-    <a class="btn btn-success" href="/wiki/create"><l>Wiki.Create:Title</l></a>
+<div class="container">
+    <div class="btn-group spacer">
+        <a class="btn btn-default" href="/wiki"><l>Wiki.TOC:Title</l></a>
+        <a class="btn btn-default" href="/wiki/list"><l>Wiki.List:Title</l></a>
+        <a class="btn btn-success" href="/wiki/create"><l>Wiki.Create:Title</l></a>
+    </div>
+    <place>Content</place>
 </div>
-
-<h1 class="page-header">
-    <header/>
-</h1>
-<place>Content</place>
