--- a/src/Assets/bower/trumbowyg/index.html
+++ b/src/Assets/bower/trumbowyg/index.html
@@ -5,7 +5,58 @@
         <title>Trumbowyg by Alex-D</title>
         <base href="/test/base/url/">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="/examples/css/main.css">
+        <style>
+            html,
+            body {
+                margin: 0;
+                padding: 0;
+                background-color: #f4f7fa;
+                font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
+            }
+
+            header {
+                text-align: center;
+            }
+
+            .container {
+                max-width: 960px;
+                margin: 0 auto;
+            }
+
+            .dark-section {
+                background: #111;
+                color: #ddd;
+                margin-top: 50px;
+                padding: 50px 0 100px;
+            }
+
+            .dark-section .title {
+                font-weight: normal;
+                text-align: center;
+                font-size: 32px;
+                margin: 20px 0 50px;
+            }
+
+            .form-submit {
+                background: transparent;
+                border: 1px solid #555;
+                color: #ccc;
+                padding: 7px 13px;
+                margin-right: 17px;
+                float: right;
+            }
+
+            h2 {
+                font-size: 26px;
+            }
+
+            h1 + pre,
+            h2 + pre,
+            h3 + pre,
+            h4 + pre {
+                margin-top: -20px;
+            }
+        </style>
         <link rel="stylesheet" href="/dist/ui/trumbowyg.css">
         <link rel="stylesheet" href="/dist/plugins/colors/ui/trumbowyg.colors.css">
     </head>
