--- a/src/Assets/bootstrap-codeine/Widgets/Form/WYSIWYG/Trumbowyg.html
+++ b/src/Assets/bootstrap-codeine/Widgets/Form/WYSIWYG/Trumbowyg.html
@@ -17,6 +17,5 @@
     {
         $('#<k>ID</k>_Hidden').val($('#<k>ID</k>').trumbowyg('html'));
     });
-
-
+    $('#<k>ID</k>_Hidden').val($('#<k>ID</k>').trumbowyg('html'));
 </jsrun>
