--- a/src/Assets/bootstrap-codeine/Main.html
+++ b/src/Assets/bootstrap-codeine/Main.html
@@ -34,8 +34,8 @@
 
     <css>bootstrap-codeine:addons</css>
 
-    <js>:bower/jquery/dist/jquery.min</js>
-    <js>:bower/bootstrap/dist/js/bootstrap.min</js>
+    <js>:bower/jquery/dist/jquery</js>
+    <js>:bower/bootstrap/dist/js/bootstrap</js>
 
     <css>Default</css>
     <css>print</css>
