Radiobutton ID fix.

--- a/src/Assets/bootstrap-codeine/Widgets/Form/Radio.html
+++ b/src/Assets/bootstrap-codeine/Widgets/Form/Radio.html
@@ -1,6 +1,6 @@
 <div class="<k>RadioClass</k>">
     <label class="radio-inline">
-        <input type="radio" name="<k>Name</k>" id="<k>Name</k>" value="<k>Value</k>"
+        <input type="radio" name="<k>Name</k>" id="<k>Name</k>_<k>IX</k>" value="<k>Value</k>"
         <block>
             checked="<k>Checked</k>"
         </block>>
