Test Engine Overhauled

--- a/src/Assets/Test/Main.html
+++ b/src/Assets/Test/Main.html
@@ -1,4 +1,5 @@
-<div class="container-fluid">
-    <h1>Codeine Test Engine</h1>
+<subtitle>Codeine Test Engine</subtitle>
+
+<table class="table table-striped">
     <place>Content</place>
-</div>
+</table>
