--- a/src/Assets/Test/Case.html
+++ b/src/Assets/Test/Case.html
@@ -20,11 +20,13 @@
         <key>Time.Run</key> ms.
     </td>
     <td>
-        <a data-toggle="collapse" href="#ResultActual_<key>ID</key>" aria-expanded="false" aria-controls="collapseExample">
+        <a data-toggle="collapse" href="#ResultActual_<key>CID</key>" aria-expanded="false" aria-controls="collapseExample">
           Result
         </a>
     </td>
 </tr>
-<tr class="collapse" id="ResultActual_<key>ID</key>">
-  <td colspan="6"><pre><key>Result.Actual</key></pre></td>
+<tr class="collapse" id="ResultActual_<key>CID</key>">
+    <td colspan="6">
+        <textarea class="form-control input-block"><key>Result.Actual</key></textarea>
+    </td>
 </tr>
