New Test Assert — Empty Test Template fixes

--- a/src/Assets/Test/Case.html
+++ b/src/Assets/Test/Case.html
@@ -27,6 +27,6 @@
 </tr>
 <tr class="collapse" id="ResultActual_<key>CID</key>">
     <td colspan="6">
-        <textarea class="form-control input-block"><key>Result.Actual</key></textarea>
+        <pre><code class="json"><htmlentities><key>Result.Actual</key></htmlentities></code></pre>
     </td>
 </tr>
