Refactored User Reset to User Reset Password

--- a/src/Assets/Security/Auth/Password.html
+++ b/src/Assets/Security/Auth/Password.html
@@ -8,7 +8,7 @@
             <div class="form-group">
                 <label for="Password"><l>User.Entity:Password.First</l>:</label>
                 <input class="form-control input-lg" id="Password" type="password" name="Password" value="" placeholder="<l>User.Entity:Password.First</l>" required="required" />
-                <a href="/forgot" class="help-block"><l>User.Reset:Title</l></a>
+                <a href="/user/reset/password" class="help-block"><l>User.Reset.Password:Title</l></a>
             </div>
 
             <div class="form-group">
