--- a/src/Assets/User/Authenticate/Incorrect.html
+++ b/src/Assets/User/Authenticate/Incorrect.html
@@ -1,4 +1,4 @@
 <h2 class="page-header"><l>User.Login:Incorrect</l></h2>
 
 <a class="btn btn-default" href="/login"><l>User.Login:Retry</l></a>
-<a class="btn btn-default" href="/forgot"><l>User.Reset:Title</l></a>
+<a class="btn btn-default" href="/user/reset/password"><l>User.Reset:Title</l></a>
