--- a/src/Assets/User/Reset/Password/Form.html
+++ b/src/Assets/User/Reset/Password/Form.html
@@ -1,13 +1,13 @@
-<subtitle><l>User.Reset:Subtitle</l></subtitle>
+<subtitle><l>User.Reset.Password:Subtitle</l></subtitle>
 <h2 class="page-header"><header/></h2>
 <div class="panel panel-default">
     <div class="panel-body">
         <form role="form" action="" method="post">
             <div class="form-group">
-                <label for="EMail"><l>User.Reset:EMail</l></label>
+                <label for="EMail"><l>User.Reset.Password:EMail</l></label>
                 <input class="form-control" id="EMail" type="email" name="EMail" autofocus required />
             </div>
-            <input class="btn btn-danger" type="submit" value="<l>User.Reset:Reset</l>"/>
+            <input class="btn btn-danger" type="submit" value="<l>User.Reset.Password:Reset</l>"/>
         </form>
     </div>
 </div>
