Fix control pills. Font Awesome updated.

--- a/src/Assets/Control/Mixins/RUD.html
+++ b/src/Assets/Control/Mixins/RUD.html
@@ -1,20 +1,20 @@
 <li>
     <a href="/control/<call>Entity</call>/Touch/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-refresh" data-toggle="tooltip" title="<l><call>Entity</call>.Touch:Title</l>"></span>
+        <span class="fas fa-sync-alt" data-toggle="tooltip" title="<l><call>Entity</call>.Touch:Title</l>"></span>
     </a>
 </li>
 <li>
     <a href="/control/<call>Entity</call>/Show/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-eye" data-toggle="tooltip" title="<l><call>Entity</call>.Show:Title</l>"></span>
+        <span class="fas fa-eye" data-toggle="tooltip" title="<l><call>Entity</call>.Show:Title</l>"></span>
     </a>
 </li>
 <li>
     <a href="/control/<call>Entity</call>/Update/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-pencil" data-toggle="tooltip" title="<l><call>Entity</call>.Update:Title</l>"></span>
+        <span class="fas fa-pencil-alt" data-toggle="tooltip" title="<l><call>Entity</call>.Update:Title</l>"></span>
     </a>
 </li>
 <li>
     <a href="/control/<call>Entity</call>/Delete/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-trash-o" data-toggle="tooltip" title="<l><call>Entity</call>.Delete:Title</l>"></span>
+        <span class="fas fa-trash" data-toggle="tooltip" title="<l><call>Entity</call>.Delete:Title</l>"></span>
     </a>
 </li>
