--- a/src/Assets/Control/Pills/Top.html
+++ b/src/Assets/Control/Pills/Top.html
@@ -1,31 +1,31 @@
-<div class="btn-group-vertical btn-group-xs hidden-print control-bar">
+<div class="btn-group-vertical hidden-print control-bar">
     <a class="btn btn-default btn-disabled text-xs" href="#">
         <k>EV</k>
     </a>
     <a class="btn btn-default" href="/control/<call>Entity</call>"
        data-toggle="tooltip" data-title="ЦУП" data-placement="left">
-        <span class="fa fa-wrench"></span>
+        <span class="fas fa-wrench"></span>
     </a>
     <a class="btn btn-default"
        href="/control/<call>Entity</call>/Touch/<k>ID</k>?BackURL=<call>HTTP.URL</call>"
         data-toggle="tooltip" data-title="Обновить" data-placement="left">
-        <span class="fa fa-refresh"></span>
+        <span class="fas fa-sync-alt"></span>
     </a>
     <a class="btn btn-default"
        href="/control/<call>Entity</call>/Export/<k>ID</k>"
         data-toggle="tooltip" data-title="Экспортировать" data-placement="left">
-        <span class="fa fa-code"></span>
+        <span class="fas fa-code"></span>
     </a>
     <a class="btn btn-default" href="/control/<call>Entity</call>/Show/<k>ID</k>"
        data-toggle="tooltip" data-title="Просмотреть" data-placement="left">
-        <span class="fa fa-eye"></span>
+        <span class="fas fa-eye"></span>
     </a>
     <a class="btn btn-default" href="/control/<call>Entity</call>/Update/<k>ID</k>?BackURL=<call>HTTP.URL</call>"
        data-toggle="tooltip" data-title="Редактировать" data-placement="left">
-        <span class="fa fa-pencil"></span>
+        <span class="fas fa-pencil-alt"></span>
     </a>
     <a class="btn btn-danger" href="/control/<call>Entity</call>/Delete/<k>ID</k>?BackURL=<call>HTTP.URL</call>"
        data-toggle="tooltip" data-title="Удалить" data-placement="left">
-        <span class="fa fa-trash-o"></span>
+        <span class="fas fa-trash"></span>
     </a>
 </div>
