--- a/src/Assets/Control/Pills/UD.html
+++ b/src/Assets/Control/Pills/UD.html
@@ -1,11 +1,11 @@
-<div class="btn-toolbar btn-group-sm hidden-print">
+<div class="btn-toolbar hidden-print">
     <a class="btn btn-default" href="/control/<call>Entity</call>/Show/<k>ID</k>">
-        <span class="fa fa-eye" data-toggle="tooltip" title="Просмотреть"></span>
+        <span class="fas fa-eye" data-toggle="tooltip" title="Просмотреть"></span>
     </a>
     <a class="btn btn-default" href="/control/<call>Entity</call>/Update/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-pencil" data-toggle="tooltip" title="Редактировать"></span>
+        <span class="fas fa-pencil-alt" data-toggle="tooltip" title="Редактировать"></span>
     </a>
     <a class="btn btn-danger" href="/control/<call>Entity</call>/Delete/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-trash-o" data-toggle="tooltip" title="Удалить"></span>
+        <span class="fas fa-trash" data-toggle="tooltip" title="Удалить"></span>
     </a>
 </div>
