--- a/src/Assets/Control/Pills/Inline.html
+++ b/src/Assets/Control/Pills/Inline.html
@@ -1,20 +1,20 @@
 <li>
     <a class="no-border" href="/control/<call>Entity</call>/Touch/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-refresh" data-toggle="tooltip" title="Обновить"></span>
+        <span class="fas fa-sync-alt" data-toggle="tooltip" title="Обновить"></span>
     </a>
 </li>
 <li>
     <a class="no-border" href="/control/<call>Entity</call>/Show/<k>ID</k>">
-        <span class="fa fa-eye" data-toggle="tooltip" title="Просмотреть"></span>
+        <span class="fas fa-eye" data-toggle="tooltip" title="Просмотреть"></span>
     </a>
 </li>
 <li>
     <a class="no-border" href="/control/<call>Entity</call>/Update/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-pencil" data-toggle="tooltip" title="Редактировать"></span>
+        <span class="fas fa-pencil-alt" data-toggle="tooltip" title="Редактировать"></span>
     </a>
 </li>
 <li>
     <a class="no-border" href="/control/<call>Entity</call>/Delete/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-trash-o" data-toggle="tooltip" title="Удалить"></span>
+        <span class="fas fa-trash" data-toggle="tooltip" title="Удалить"></span>
     </a>
 </li>
