--- a/src/Assets/Control/Pills/MRUD.html
+++ b/src/Assets/Control/Pills/MRUD.html
@@ -1,24 +1,24 @@
-<div class="btn-group btn-group-xs hidden-print">
+<div class="btn-group hidden-print">
     <if value="<k>Status</k>" neq="1">
         <a class="btn btn-default" href="/control/<call>Entity</call>/Allow/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-            <span class="fa fa-check" data-toggle="tooltip" title="Одобрить"></span>
+            <span class="fas fa-check" data-toggle="tooltip" title="Одобрить"></span>
         </a>
     </if>
     <if value="<k>Status</k>" neq="-1">
         <a class="btn btn-default" href="/control/<call>Entity</call>/Disallow/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-            <span class="fa fa-times" data-toggle="tooltip" title="Отклонить"></span>
+            <span class="fas fa-times" data-toggle="tooltip" title="Отклонить"></span>
         </a>
     </if>
     <a class="btn btn-default" href="/control/<call>Entity</call>/Touch/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-refresh" data-toggle="tooltip" title="Обновить"></span>
+        <span class="fas fa-sync-alt" data-toggle="tooltip" title="Обновить"></span>
     </a>
     <a class="btn btn-default" href="/control/<call>Entity</call>/Show/<k>ID</k>">
-        <span class="fa fa-eye" data-toggle="tooltip" title="Просмотреть"></span>
+        <span class="fas fa-eye" data-toggle="tooltip" title="Просмотреть"></span>
     </a>
     <a class="btn btn-default" href="/control/<call>Entity</call>/Update/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-pencil" data-toggle="tooltip" title="Редактировать"></span>
+        <span class="fas fa-pencil-alt" data-toggle="tooltip" title="Редактировать"></span>
     </a>
     <a class="btn btn-danger" href="/control/<call>Entity</call>/Delete/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-trash" data-toggle="tooltip" title="Удалить"></span>
+        <span class="fas fa-trash" data-toggle="tooltip" title="Удалить"></span>
     </a>
 </div>
