Dynamic Form for Password Cleanup for widgets

--- a/src/Assets/Security/Auth/Password.html
+++ b/src/Assets/Security/Auth/Password.html
@@ -1,28 +1,14 @@
-<div class="panel panel-default">
-    <div class="panel-body">
-        <form role="form" method="post" action="/auth/Password">
-            <div class="form-group">
-                <label for="Determinant"><l>User.Entity:EMail</l>:</label>
-                <input class="form-control input-lg" id="Determinant" type="text" name="EMail" required="required" placeholder="<l>User.Entity:EMail</l>" autofocus="autofocus"/>
-            </div>
-            <div class="form-group">
-                <label for="Password"><l>User.Entity:Password.First</l>:</label>
-                <input class="form-control input-lg" id="Password" type="password" name="Password" value="" placeholder="<l>User.Entity:Password.First</l>" required="required" />
-                <a href="/user/reset/password" class="help-block"><l>User.Reset.Password:Title</l></a>
-            </div>
-
-            <div class="form-group">
-                <div class="checkbox">
-                    <label for="TTL"><input type="checkbox" name="Remember" id="TTL" value="Long">
-                        <l>Security.Auth.Password:Remember</l>
-                    </label>
-                </div>
-            </div>
-            <button type="submit" class="btn btn-lg btn-block btn-success"><l>Security.Auth.Password:Submit</l></button>
+<form role="form" method="post" action="/auth/Password">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <place>Form</place>
+        </div>
+        <div class="panel-footer">
+            <button type="submit" class="btn btn-lg btn-success"><l>Security.Auth.Password:Submit</l></button>
+            <input type="hidden" name="BackURL" value="<variable>BackURL</variable>" />
             <if value="<call>Project.Join.Open</call>" eq="1">
-                <a class="btn btn-lg btn-block btn-default" href="/join"><l>User.Create:Title</l></a>
+                <a class="btn btn-lg btn-default" href="/join"><l>User.Create:Title</l></a>
             </if>
-            <input type="hidden" name="BackURL" value="<k>BackURL</k>" />
-        </form>
-    </div>
+        </div>
 </div>
+</form>
