--- a/src/Assets/bootstrap-codeine/Widgets/Form/Checkbox.html
+++ b/src/Assets/bootstrap-codeine/Widgets/Form/Checkbox.html
@@ -3,7 +3,7 @@
         <input id="<k>ID</k>" type="checkbox" name="<k>Name</k>" value="true"
             <block>checked="<k>Checked</k>"</block>
             <block>required="<k>Required</k>"</block> />
-            <k>Label</k>
+            <l><k>Label</k></l>
     </label>
     <if value="<k>Help</k>" eq="1">
         <div class="help-block"><l><k>Entity</k>.Help:<k>Key</k></l></div>
