Pagination improvements. Related fixes.

--- a/src/Assets/bootstrap-codeine/Widgets/Paginator.html
+++ b/src/Assets/bootstrap-codeine/Widgets/Paginator.html
@@ -2,5 +2,10 @@
 <js>Default:arrow-navigation</js>
 <ul class="pagination pagination-sm">
     <k>Value</k>
+    <li class="disabled">
+        <a href="#">
+            <key>Pagination.Labels.From</key>..<key>Pagination.Labels.To</key> <locale>Entity.List.Pagination:OutOf</locale> <key>Pagination.Count</key>
+        </a>
+    </li>
 </ul>
 <div class="clearfix"></div>
