--- a/src/Assets/Test/Main.html
+++ b/src/Assets/Test/Main.html
@@ -1,6 +1,6 @@
 <subtitle>Codeine Test Engine</subtitle>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.10.0/styles/default.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.10.0/highlight.min.js"></script>
-<table class="table table-striped">
+<ul class="list-group">
     <place>Content</place>
-</table>
+</ul>
