Reset Password Link. Locale fix.

--- a/src/Assets/Security/Auth/Password.html
+++ b/src/Assets/Security/Auth/Password.html
@@ -9,6 +9,7 @@
             <if value="<call>Project.Join.Open</call>" eq="1">
                 <a class="btn btn-lg btn-default" href="/join"><l>User.Create:Title</l></a>
             </if>
+            <a class="btn btn-lg btn-default" href="/user/reset/password"><l>User.Reset.Password:Title</l></a>
         </div>
 </div>
 </form>
